Adjusting the font size and tinymce width (Bug #1385818)
The font size was too small before and the textarea was not wide
enough so the tinymce buttons were wrapping

--- a/htdocs/theme/views.css
+++ b/htdocs/theme/views.css
@@ -1099,5 +1099,6 @@ td.incomplete {
     display: block;
     position: fixed;
     z-index: 1;
-    width: 600px;
+    width: 680px;
+    font-size: 1em !important;
 }
